src/test/ui/parser/bad-name.rs
// error-pattern: expected

fn main() {
  let x.y::<isize>.z foo;
}
